common-applications/test-environment/chat-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-api-service
  namespace: chat-api
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: chat-api
  type: ClusterIP
